--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,83 @@
 /* You can add global styles to this file, and also import other style files */
+@import "~@angular/material/prebuilt-themes/deeppurple-amber.css";
+
+// masonry-demo {
+//     text-align: center;
+//     width: 80%;
+//     margin: 0 auto;
+//   }
+
+//   .links {
+//       width: 50%;
+//       margin: 0 auto;
+//       display: flex;
+//       align-items: center;
+//       justify-content: center;
+//   }
+
+//   .links a {
+//     flex-basis: 80%;
+//       color: #009FB7;
+//       font-weight: bold;
+//       text-decoration: none;
+//   }
+
+//   .links a:hover {
+//       color: #FE4A49;
+//   }
+
+//   .links iframe {
+//     flex-basis: 50%;
+//   }
+
+//   ngx-masonry {
+//     margin: 0 auto;
+//   }
+
+//   button {
+//     cursor: pointer;
+//     width: 40%;
+//     height: 50px;
+//     background: #f1f1f1;
+//     border: 1px solid #ddd;
+//     border-radius: 5px;
+//     margin: 50px;
+//   }
+
+//   ng-masonry-grid-item {
+//     margin-bottom: 20px;
+//     background-color: #f1f1f1;
+//     background-size: cover;
+//     max-width: 340px;
+//     margin: 0px auto;
+//   }
+
+//   ng-masonry-grid-item img {
+//     width: 100%;
+//     height: 100%;
+//     min-height: 340px;
+//     margin: auto;
+//   }
+mat-toolbar-row {
+  button,
+  span:focus {
+    outline: none;
+  }
+}
+.no-data-msg {
+  text-align: center;
+  color: red;
+}
+
+ng-masonry-grid-item:hover {
+  // box-shadow:  grey 0px 12px 45px 2px;
+  box-shadow: 0 10px 17px 0 #9d9d9d;
+  cursor: pointer;
+}
+.movie-info, .series-info {
+  margin: 10px;
+}
+button:focus {
+  outline: none;
+}
+
